syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "LogDetailProto";

package log_detail;

// The greeting service definition.
service LogDetailService {
  // Sends a greeting
  rpc GetLogDetails (LogDetailRequestPage) returns (LogDetailReplyPage) {}
  rpc GetById (LogDetailId) returns (LogDetail) {}
  rpc AddLogDetail (LogDetail) returns (LogDetailId) {}
  rpc AddLogDetails (LogDetailList) returns (LogDetailReply) {}
  rpc UpdateLogDetail (LogDetail) returns (LogDetailReply) {}
  rpc DeleteLogDetail (LogDetailId) returns (LogDetailReply) {}

}

message LogDetailRequestPage {
  uint64 page_size = 1;
  uint64 page = 2;
}

message LogDetailReply { bool success = 1; }

// The request message containing the user's name.
message LogDetailId {
  string id = 1;
}

// The response message containing the greetings
message LogDetail {
  string id = 1;
  string log_id = 2;
  string content = 3;
  string create_time = 4;
}

message LogDetailList { repeated LogDetail list = 1; }

message LogDetailReplyPage {
  repeated LogDetail list = 1;
  uint64 total = 2;
}