syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "ProgramProto";

package program;

// The greeting service definition.
service ProgramService {
  // Sends a greeting
  rpc GetPrograms (ProgramRequestPage) returns (ProgramReplyPage) {}
  rpc GetById (ProgramId) returns (Program) {}
  rpc AddProgram (Program) returns (ProgramId) {}
  rpc AddPrograms (ProgramList) returns (ProgramReply) {}
  rpc UpdateProgram (Program) returns (ProgramReply) {}
  rpc DeleteProgram (ProgramId) returns (ProgramReply) {}

}

message ProgramRequestPage {
  uint64 page_size = 1;
  uint64 page = 2;
}

message ProgramReply { bool success = 1; }

// The request message containing the user's name.
message ProgramId {
  string id = 1;
}

// The response message containing the greetings
message Program {
  string id = 1;
  string name = 2;
  string content = 4;
  string create_time = 5;
}

message ProgramList { repeated Program list = 1; }

message ProgramReplyPage {
  repeated Program list = 1;
  uint64 total = 2;
}